--- a/skillswap/package.json
+++ b/skillswap/package.json
@@ -2,6 +2,7 @@
   "name": "skillswap",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,7 +12,6 @@
   "dependencies": {
     "@prisma/adapter-mariadb": "^7.1.0",
     "@prisma/client": "^7.1.0",
-    "dotenv": "^17.2.3",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
@@ -21,11 +21,12 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.22",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "postcss": "^8.5.6",
     "prisma": "^7.1.0",
     "tailwindcss": "^3.4.18",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
