--- a/skillswap/package.json
+++ b/skillswap/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@prisma/adapter-mariadb": "^7.1.0",
     "@prisma/client": "^7.1.0",
-    "next": "16.0.7",
+    "bcryptjs": "^3.0.3",
+    "crypto": "^1.0.1",
+    "next": "^16.0.10",
+    "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.19.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
