--- a/skillswap/package.json
+++ b/skillswap/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^7.1.0",
     "bcryptjs": "^3.0.3",
     "crypto": "^1.0.1",
+    "fuse.js": "^7.1.0",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
